# smith

./: .gitignore  .travis.yml  BUILD.bazel  Makefile  WORKSPACE
cmd/smith/: BUILD.bazel
examples/tprattribute/main/: BUILD.bazel
it/: adoption_test.go  main_test.go  resource_deletion_test.go  store_test.go  tpr_attribute_test.go  update_test.go  utils_for_its.go
it/svc_cat/: service_catalog_test.go
misc/: servicecatalog-template-example.yaml
pkg/processor/reference/: kmp.go  match.go  simple_match.go
