load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//docker:docker.bzl", "docker_build")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "version.go",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/smith/app:go_default_library",
        "//pkg/client:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
    ],
)

go_binary(
    name = "smith",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "smith-race",
    gc_linkopts = ["-race"],
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)

docker_build(
    name = "docker",
    entrypoint = ["smith"],
    files = ["//cmd/smith"],
)

docker_build(
    name = "docker-race",
    entrypoint = ["smith"],
    files = ["//cmd/smith:smith-race"],
)
