load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    visibility = ["//visibility:private"],
    deps = [
        "//examples/tprattribute:go_default_library",
        "//pkg/client:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
    ],
)

go_binary(
    name = "main-race",
    gc_linkopts = ["-race"],
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "main",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
